--- a/flask/app/templates/home.html
+++ b/flask/app/templates/home.html
@@ -2,22 +2,25 @@
 
 {% block content %}
 
+        <small class="mt-5">
+            Daily zabbix hosts updater. Zabbix host list from http://10.20.50.57/zabbix/ will be checked every 24 hours at 12AM.
+            New added hosts will be appended to list below, sorted by ADD DATE column.
+        </small>
 
-
-          <table class="table table-striped table-dark">
+          <table class="table table-striped table-dark mt-5">
               <thead>
                 <tr>
                   <th scope="col">#</th>
                   <th scope="col">HOSTNAME</th>
                   <th scope="col">IP</th>
-                  <th scope="col">DATE</th>
+                  <th scope="col">ADD DATE</th>
                 </tr>
               </thead>
               <tbody>
 
                   {% for host in hosts %}
                     <tr>
-                        <th scope="row"> {{ host.id }} </th>
+                        <th scope="row mt-2"> {{ host.id }} </th>
                         <td> {{ host.host }} </td>
                         <td> {{ host.ip }} </td>
                         <td> {{ host.date.strftime('%Y-%m-%d') }} </td>
